# ludeme

./: .env.example  .gitignore  Cargo.toml  DECISION-LOG.md  build-demo.ps1  package-lock.json  package.json
crates/ludeme-core/: Cargo.toml
crates/ludeme-core/src/: entities.rs  events.rs  lib.rs  state.rs  taxonomy.rs
crates/ludeme-demos/: .gitkeep
crates/ludeme-demos/jump-feel/: Cargo.toml
crates/ludeme-demos/jump-feel/src/: lib.rs
crates/ludeme-demos/maze-80/: Cargo.toml
crates/ludeme-demos/maze-80/src/: lib.rs
crates/ludeme-demos/pong-76/: Cargo.toml
crates/ludeme-demos/pong-76/src/: lib.rs
crates/ludeme-macros/: Cargo.toml
crates/ludeme-macros/src/: lib.rs
crates/ludeme-server/: Cargo.toml
crates/ludeme-server/src/: db.rs  main.rs  routes.rs  seed.rs  seed_sample.rs
docs/: 01-vision.md  02-tech-stack.md  03-crate-architecture.md  04-shell-api-contract.md  05-systems-catalog.md  06-domain-model.md  07-fidelity-spec.md  08-taxonomy.md  09-ux-flows.md  10-roadmap.md  11-source-of-truth.md  12-developer-guide.md  README.md
migrations/: .gitkeep  0001_initial.sql  0002_fts5_search.sql  0003_param_changes.sql  0004_experiment_params.sql
shell/: README.md  package-lock.json  package.json  vite.config.ts
shell/src/: app.css  app.html
shell/src/lib/: api.ts  ludeme-shell.ts  session.svelte.ts  types.ts
shell/src/lib/components/: BookmarkPanel.svelte  ExperimentPanel.svelte  ObservationsPanel.svelte  ParamTunerPanel.svelte  PublishPanel.svelte  ShellDrawer.svelte
shell/src/routes/: +error.svelte  +layout.svelte  +page.server.ts  +page.svelte
shell/src/routes/collections/: +page.server.ts  +page.svelte
shell/src/routes/collections/[id]/: +page.server.ts  +page.svelte
shell/src/routes/demo/[id]/: +page.server.ts  +page.svelte
shell/src/routes/mechanics/: +page.server.ts  +page.svelte
shell/src/routes/mechanics/[id]/: +page.server.ts  +page.svelte
shell/src/routes/works/: +page.server.ts  +page.svelte
shell/src/routes/works/[id]/: +page.server.ts  +page.svelte
shell/static/demos/: .gitkeep
taxonomy/: fidelity-levels.toml  mechanic-families.toml  relation-types.toml
tools/: .gitkeep
