[workspace]
resolver = "2"
members = [
    "crates/ludeme-core",
    "crates/ludeme-server",
    "crates/ludeme-macros",
    "crates/ludeme-demos/pong-76",
    "crates/ludeme-demos/maze-80",
    "crates/ludeme-demos/jump-feel",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
sqlx = { version = "0.8", features = ["sqlite", "uuid", "runtime-tokio-rustls", "migrate"] }
ts-rs = { version = "10", features = ["uuid-impl"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
# WASM toolchain — pinned here so all crates share the same version
wasm-bindgen         = "0.2"
wasm-bindgen-futures = "0.4"
js-sys               = "0.3"
web-sys              = "0.3"

# Optimize WASM demos for size in release builds
[profile.release]
opt-level = "z"
lto       = true
