[package]
name = "ludeme-server"
version = "0.1.0"
edition = "2021"
description = "Axum backend API server for Ludeme."

[[bin]]
name = "ludeme-server"
path = "src/main.rs"

[dependencies]
ludeme-core = { path = "../ludeme-core" }
axum = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
